--- a/sem10/users_app/package.json
+++ b/sem10/users_app/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
+    "react-spinkit": "^3.0.0",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-saga": "^0.16.0",
